--- a/_output.yml
+++ b/_output.yml
@@ -1,17 +1,29 @@
 bookdown::gitbook:
   css: style.css
   split_by: chapter
+  # Modify to use chicago-author-date (17th ed.)
+  pandoc_args: [ "--csl", "chicago-author-date.csl" ]
   config:
     toc:
       collapse: subsection
       before: |
-        <li><a href="./">A Minimal Bookdown Book</a></li>
+        <li><a href="./">Change This to the Book's Title</a></li>
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
 bookdown::pdf_book:
   includes:
     in_header: preamble.tex
   latex_engine: xelatex
-  citation_package: natbib
+  # Customize page margins, font size, and paragraph spacing
+  geometry: "left=1.5in, right=1in, top=1in, bottom=1in"
+  fontsize: 12pt
+  linestretch: 1.5
+  # Modify to use chicago-author-date (17th ed.)
+  # citation_package: natbib
+  citation_package: none
+  pandoc_args: [ "--csl", "chicago-author-date.csl" ]
+  keep_tex: yes
 bookdown::epub_book:
   stylesheet: style.css
+  # Modify to use chicago-author-date (17th ed.)
+  pandoc_args: [ "--csl", "chicago-author-date.csl" ]
