Customize _bookdown.yml
Initial customization of _bookdown.yml for my purposes. Add a comment reminding to change the repo. The rmd_files: and rmd_subdir: statements should work, but so far they don't work as they should. I will have to change the clean: statement in the near future.

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,7 +1,13 @@
 book_filename: "bookdown-start"
 chapter_name: "Chapter "
+# Change the next line to point to the book's GitHub repository.
 repo: https://github.com/seankross/bookdown-start
 output_dir: docs
-rmd_files: ["index.Rmd", "01-Introduction.Rmd", "02-Diving-In.Rmd"]
+# This is the default rmd_files:. But I want one file in the root and the rest in chapters.
+# rmd_files: ["index.Rmd", "01-Introduction.Rmd", "02-Diving-In.Rmd"]
+# These two should work, but they don't work correctly yet.
+rmd_files: ["index.Rmd"]
+rmd_subdir: ["chapters]
+# I don't know what this does.
 clean: [packages.bib, bookdown.bbl]
 new_session: yes
